fixed profile page layout problem

--- a/client/src/style/Period.css
+++ b/client/src/style/Period.css
@@ -47,6 +47,7 @@
 	font-size: 20px !important;
 	border-radius: 10px;
 	margin-bottom: 10px !important;
+	margin-top: 50px;
 	
 	
 }
